Fixed issue where gym images were being stretched with screen resize

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,10 +327,10 @@ select#country option {
     display: flex;
     padding: 0;
     margin-bottom: 1rem;
-    max-width: 100%;
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
     max-height: 30vh;
+    max-width: 100%;
     text-align:center ;
 }
 
